--- a/PracticeDesktopApp/Views/MainWindow.xaml
+++ b/PracticeDesktopApp/Views/MainWindow.xaml
@@ -1,11 +1,12 @@
-﻿<Window x:Class="PracticeDesktopApp.MainWindow"
+﻿<Window
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:PracticeDesktopApp"
-        mc:Ignorable="d"
         xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
+        x:Class="PracticeDesktopApp.MainWindow"
+        mc:Ignorable="d"
         TextElement.Foreground="{DynamicResource MaterialDesignBody}"
         TextElement.FontWeight="Regular"
         TextElement.FontSize="13"
@@ -15,15 +16,22 @@
         FontFamily="{DynamicResource MaterialDesignFont}"
         Title="MainWindow" Height="450" Width="800">
 
-    <Grid>
-        <StackPanel Orientation="Horizontal" VerticalAlignment="Top" Width="800" Height="40" Background="DarkOrange" >
+    
 
-        </StackPanel>
+    <Grid >
+        <Grid.RowDefinitions>
+            <RowDefinition Height="auto"/>
+            <RowDefinition Height="auto"/>
+            <RowDefinition Height="*"/>
+        </Grid.RowDefinitions>
+
+        <StackPanel Orientation="Horizontal" VerticalAlignment="Top" Width="800" Height="40" Background="DarkOrange" />
         <TextBlock 
             HorizontalAlignment="Center" 
-            TextWrapping="Wrap" Text="Welcome To The Train Card"
-            VerticalAlignment="Center" FontSize="40" />
-        <Button Content="Start Playing" Width="300" HorizontalAlignment="Center" Margin="244,257,249.6,131" Click="Button_Click" />
+            TextWrapping="Wrap" Text="Welcome To The Desktop Games"
+            VerticalAlignment="Center" FontSize="40" Margin="70,100,108.6,316.8" Width="615" />
+        <Button Name="TrainCard" Content="Play Train Card" Width="300" HorizontalAlignment="Center" Margin="240,173,253.6,259.8" Click="Button_Click" />
+        <Button Name="HangedMan" Content="Play Hanged Man" Width="300" HorizontalAlignment="Center" Click="HangedMan_Click"></Button>
 
     </Grid>
 </Window>
