--- a/PracticeDesktopApp/Views/TrainCardWindow.xaml
+++ b/PracticeDesktopApp/Views/TrainCardWindow.xaml
@@ -1,11 +1,11 @@
-﻿<Window x:Class="PracticeDesktopApp.Views.windowGame"
+﻿<Window x:Class="PracticeDesktopApp.Views.TrainCardWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:PracticeDesktopApp.Views"
         mc:Ignorable="d"
-        Title="windowGame" Height="450" Width="800">
+        Title="TrainCardWindow" Height="450" Width="800">
     <Grid Name="grid" ShowGridLines ="false">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="1024.8"/>
