--- a/PracticeDesktopApp/Views/Windows/Main/MainWindow.xaml
+++ b/PracticeDesktopApp/Views/Windows/Main/MainWindow.xaml
@@ -17,10 +17,7 @@
         FontFamily="{DynamicResource MaterialDesignFont}"
         Title="MainWindow" Height="450" Width="800"
         >
-
-
-
-    <Grid>
+    <Grid >
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="100">
             </ColumnDefinition>
@@ -32,9 +29,26 @@
 
         </Grid.RowDefinitions>
         <StackPanel Grid.Column="0" Grid.Row="0"  Orientation="Horizontal" VerticalAlignment="Top" Width="100" Height="42" Background="DarkSlateBlue" />
-        <StackPanel Grid.Column="1" Grid.Row="0" Orientation="Horizontal" VerticalAlignment="Top" Width="800" Height="42" Background="DarkSlateBlue" />
+        <StackPanel Grid.Column="1" Grid.Row="0" Orientation="Horizontal" VerticalAlignment="Top" Width="800" Height="42" Background="DarkSlateBlue">
+            <Label Foreground="White" Name="lblDebug_FirstTime" HorizontalAlignment="Center" Content=""></Label>
+        </StackPanel>
+        <Grid Grid.Column="1" Name="Authorize" Visibility="Visible" Margin="0,50,-0.4,80" Grid.RowSpan="2">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="100" />
+                <RowDefinition Height="200" />
+            </Grid.RowDefinitions>
+            <Label HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="30"
+                Content="Log In or Create account to see the Games"></Label>
+            <StackPanel Grid.Row="1">
+                <Button Name="Register" Click="Register_Click"
+                        Content="Register"  Width="200" Margin="0,10,0,0" FontSize="20"></Button>
+                <Button Name="Login" Click="Login_Click"
+                        Content="Log In" Width="200" Margin="0,50,0,0" FontSize="20"></Button>
+            </StackPanel>
+        </Grid>
 
-        <Grid Grid.Column="0"  Background="DarkSlateBlue" Width="100" HorizontalAlignment="Left" Margin="0,42,0,78" Height="380" Grid.RowSpan="2">
+        <Grid Name="SideBar" Visibility="Hidden"
+            Grid.Column="0"  Background="DarkSlateBlue" Width="100" HorizontalAlignment="Left" Margin="0,42,0,78" Height="380" Grid.RowSpan="2">
             <Grid.ColumnDefinitions>
             </Grid.ColumnDefinitions>
             <Grid.RowDefinitions>
@@ -63,14 +77,15 @@
 
 
         </Grid>
-        <Grid Grid.Row="1" Grid.Column="1" Margin="10,9.6,9.6,90">
+        <Grid Name="Content" Visibility="Hidden"
+            Grid.Row="1" Grid.Column="1" Margin="10,9.6,9.6,90">
             <Grid.RowDefinitions>
                 <RowDefinition Height="100"></RowDefinition>
                 <RowDefinition></RowDefinition>
             </Grid.RowDefinitions>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition></ColumnDefinition>
-                
+
             </Grid.ColumnDefinitions>
 
             <Label Grid.Row="0" Name="lblName" HorizontalAlignment="Center" VerticalAlignment="Top" Content="Welcome Antoni" FontSize="50" ></Label>
@@ -91,12 +106,12 @@
                     <Button x:Name="PlayTrainCards" Width="200" Click="PlayTrainCards_Click">
                         <Button.Content>
                             <StackPanel Orientation="Horizontal">
-                            <fa:ImageAwesome Icon="AddressCard"></fa:ImageAwesome>
+                                <fa:ImageAwesome Icon="AddressCard"></fa:ImageAwesome>
                                 <Label Content="Play The Card's Train"></Label>
                             </StackPanel>
                         </Button.Content>
                     </Button>
-                 </StackPanel>
+                </StackPanel>
                 <StackPanel Orientation="Vertical" Grid.Row="0" Grid.Column="1">
                     <Label Content="The Hanged Man" FontSize="30" HorizontalAlignment="Center"/>
                     <StackPanel HorizontalAlignment="Center" Orientation="Vertical" Height="61" Margin="2,0,1.6,0">
