--- a/PracticeDesktopApp/Views/Modals/Profile/ModalFirstTime.xaml
+++ b/PracticeDesktopApp/Views/Modals/Profile/ModalFirstTime.xaml
@@ -1,10 +1,13 @@
-﻿<Window xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"  x:Class="PracticeDesktopApp.Views.Modals.ModalFirstTime"
+﻿<Window 
+        xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"  
+        x:Class="PracticeDesktopApp.Views.Modals.ModalFirstTime"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:PracticeDesktopApp.Views.Modals"
+        xmlns:local="clr-namesPracticeDesktopApp.Views.Modals"
         mc:Ignorable="d"
+        
         WindowStartupLocation="CenterOwner"
         Title="ModalFirstTime" Height="450" Width="400">
     <Grid>
